--- a/demand-dashboard/app/views/index.scala.html
+++ b/demand-dashboard/app/views/index.scala.html
@@ -6,10 +6,44 @@
         <title>Demand Dashboard</title>
         <script src="@routes.Assets.versioned("lib/vue/vue.js")"></script>
         <style>
+            .header {
+              display: inline-block;
+              width: 100%;
+              height: 100px;
+              background-color: #89E1D0;
+            }
 
+            .header h1 {
+              font-family: "Avenir Next";
+              font-size: 40px;
+            }
+
+            #logo-title {
+              display: inline-flex;
+              margin-left: 30px;
+              height: 100%;
+            }
+
+            #logo-title img {
+              margin: auto 10px auto 0;
+            }
+
+            #dashboard-title {
+              float: right;
+              margin-right: 30px;
+              height: 100%;
+            }
         </style>
     </head>
     <body>
-        hello, world
+        <div class="header">
+            <div id="logo-title">
+                <img src="" alt="logo" style="width:50px;height:50px;">
+                <h1>Koober</h1>
+            </div>
+            <div id="dashboard-title">
+                <h1>Demand Dashboard</h1>
+            </div>
+        </div>
     </body>
 </html>
